Add the option to import one specific concept scheme from RDF
Rather than all concepts in a given RDF file, which could contain
several schemes.